# 24-788_mini_project

./: .gitignore  README.md
EGNN/: egnn_best_model.pt  egnn_config.json  reproduce_results.ipynb  requirements.txt  train.py
PaiNN/: painn_best_model.pt  painn_config.json  painn_reproduce_results.ipynb  requirements.txt  train.py
dimenet/: dimenet2.ipynb  dimenet_best_model.pt  dimenet_config.json  pyproject.toml  reproduce_results.ipynb  requirements.txt  train.py
gcn_baseline/: gcn_best_model.pt  gcn_config.json  pyproject.toml  reproduce_results.ipynb  requirements.txt  train.py
