[tool.uv]
extra-build-dependencies = { torch-cluster = ["torch"], torch-scatter = ["torch"], torch-sparse = ["torch"] }

[project]
name = "project"
version = "0.1.0"
description = "Add a short description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "tqdm>=4.67.3",
    "wandb>=0.26.0",
]

