[tool.uv]
extra-build-dependencies = { torch-scatter = ["torch"], torch-sparse = ["torch"] }

[project]
name = "gcn-baseline"
version = "0.1.0"
description = "GCN baseline for QM9 molecular property prediction"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "numpy>=2.4.4",
    "tqdm>=4.67.3",
    "wandb>=0.26.0",
    "matplotlib>=3.10.8",
]
